--- a/src/components/Pagination/Pagination.scss
+++ b/src/components/Pagination/Pagination.scss
@@ -1,23 +1,29 @@
-.page-link {
-    padding: 0.5rem 0.75rem;
-    font-size: 0.875rem;
-    line-height: 1.5;
-    border: none;
-    color: #6982ff;
+.pagination {
+    justify-content: center;
 
-    &:focus {
-        outline: none;
-        box-shadow: none;
+    .page-link {
+        cursor: pointer;
+        padding: 0.5rem 0.75rem;
+        font-size: 0.875rem;
+        line-height: 1.5;
+        border: none;
+        color: #6982ff;
+    
+        &:focus {
+            outline: none;
+            box-shadow: none;
+        }
+    
+        &:hover {
+            color: white;
+            background-color: #6982ff;
+        }
     }
-
-    &:hover {
-        color: white;
+    
+    .page-item.active .page-link {
+        z-index: 3;
+        color: #fff;
         background-color: #6982ff;
     }
 }
 
-.page-item.active .page-link {
-    z-index: 3;
-    color: #fff;
-    background-color: #6982ff;
-}
