--- a/src/components/GameCard/GameCard.scss
+++ b/src/components/GameCard/GameCard.scss
@@ -85,7 +85,7 @@
             }
             background-color: #f8f8ff;
             border: none;
-            color: #6982ff;;
+            color: #586294;
         }
     }
      
