--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -1,24 +1,28 @@
 .navbar {
-    background: #263659;
-    box-shadow: 1px 1px 1px 0px #6990ff21;
+    background: #18181b;
+    font-weight: 600;
+    text-transform: uppercase;
 
     button {
-        font-size: .8rem;
+        font-size: 1rem;
+        font-weight: 600;
         background: transparent;
         border: none;
-        padding: .5rem;
+        padding: 0.4rem;
     }
 
     button:hover {
-        background: #586294
+        color: #d7d7d9;
+        background: #747fb3;
     }
 }
 
 .navbar-light .navbar-brand {
-    color:#f8f8f8;
+    font-size: 1rem;
+    color: #747fb3;
 
     &:hover {
-        color: #f8f8f8;
+        color: #d7d7d9;
     }
 }
 
@@ -27,10 +31,10 @@
 }
 
 .navbar-light .navbar-nav .nav-link {
-    color: #f8f8f8;
+    color: #747fb3;
 
     &:hover {
-        color: #586294;
+        color: #d7d7d9;
     }
 }
 
@@ -38,16 +42,16 @@
     padding: 0;
     font-size: 1rem;
     border: none;
-    color: #f8f8f8
+    color: #747fb3;
 }
 
 .NavItem {
-    margin: auto .2rem;
-    color: #f8f8f8
+    color: #747fb3;
 }
 
 .Search {
     margin-left: auto;
+    margin-right: 1rem;
 }
 
 .navContainer {
