--- a/src/components/GameCard/GameCard.scss
+++ b/src/components/GameCard/GameCard.scss
@@ -19,6 +19,7 @@
             font-family: 'Lato', sans-serif;
             width: 100%;
             color: #d7d7d9;
+            margin-right: 1rem;
         }
 
         .LinkIcon {
