--- a/src/assets/custom.scss
+++ b/src/assets/custom.scss
@@ -2,4 +2,45 @@
 
 body {
     background: #0e0e10;
+    
+}
+
+*::-webkit-scrollbar {
+    width: 10px;
+    height: 8px;
+    background: #d7d7d9
+    
+}
+
+*::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: #404046;
+    outline: 1px solid white;
+}
+
+* {
+    scrollbar-width: auto;
+    scrollbar-color: #d7d7d9 #404046;
+  }
+
+
+
+*::-webkit-scrollbar-button:vertical:start:decrement {
+    background:
+        linear-gradient(120deg, #d7d7d9 40%, rgba(0, 0, 0, 0) 41%),
+        linear-gradient(240deg, #d7d7d9 40%, rgba(0, 0, 0, 0) 41%),
+        linear-gradient(0deg, #d7d7d9 30%, rgba(0, 0, 0, 0) 31%);
+    background-color: #18181b;
+}
+
+
+*::-webkit-scrollbar-button:vertical:end:increment {
+    background:
+    linear-gradient(300deg, #d7d7d9 40%, rgba(0, 0, 0, 0) 41%),
+    linear-gradient(60deg, #d7d7d9 40%, rgba(0, 0, 0, 0) 41%),
+    linear-gradient(180deg, #d7d7d9 30%, rgba(0, 0, 0, 0) 31%);
+    background-color: #18181b;
 }
