--- a/src/assets/custom.scss
+++ b/src/assets/custom.scss
@@ -44,3 +44,23 @@ body {
     linear-gradient(180deg, #d7d7d9 30%, rgba(0, 0, 0, 0) 31%);
     background-color: #18181b;
 }
+
+@keyframes load {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  
+  .loader {
+    border: 4px solid rgba(255, 255, 255, 0.2);
+    border-left: 4px solid;
+    animation: load 1s infinite linear;
+    border-radius: 50%;
+    width: 80px;
+    height: 80px;
+    margin: 0 auto;
+    margin-top: 10rem;
+  }
