--- a/src/components/GameCard/GameCard.scss
+++ b/src/components/GameCard/GameCard.scss
@@ -62,6 +62,7 @@
                 padding-left: .5rem;
                 font-size: 14px;
                 color: #d7d7d9;
+                max-width: 200px;
             }
  
         }
@@ -94,4 +95,16 @@
     .GameCard {
         margin-right: 1rem;
     }
+ }
+
+ @media (min-width: 460px) {
+    .GameCard {
+        .CoverAndInfo {
+            .GameInfo {
+                .GameSummary {
+                    max-width: 100%;
+                }
+            }
+        }
+    } 
  }
