Mudanca no CSS para tamanho de imagens e texto nos gameCards

--- a/src/components/GameCard/GameCard.scss
+++ b/src/components/GameCard/GameCard.scss
@@ -108,3 +108,39 @@
         }
     } 
  }
+
+ @media (min-width: 768px) {
+    .GameCard {
+        .CoverAndInfo {
+            .GameInfo {
+                .GameSummary {
+                    max-width: 200px;
+                }
+            }
+        }
+    } 
+ }
+
+ @media (min-width: 992px) {
+    .GameCard {
+        .CoverAndInfo {
+            .GameInfo {
+                .GameSummary {
+                    max-width: 100%;
+                }
+            }
+        }
+    } 
+ }
+
+ @media (min-width: 1200px) {
+    .GameCard {
+        .CoverAndInfo {
+            .GameInfo {
+                .GameSummary {
+                    max-width: 100%;
+                }
+            }
+        }
+    } 
+ }
