--- a/src/components/GameFullInfo/GameFullInfo.scss
+++ b/src/components/GameFullInfo/GameFullInfo.scss
@@ -98,7 +98,8 @@
                 flex: 0 0 auto;
                 margin: .5rem;
                 color: #d7d7d9;
-                height: 100px;
+                width: 200px;
+                height: auto;
             }
         }
 
@@ -124,10 +125,14 @@
         .SimilarGame {
             flex: 0 0 auto;
             margin: .5rem;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
 
             img {
-                width: 100px;
-                height: 100px;
+                width: 150px;
+                height: auto;
             }
 
             p {
