--- a/src/components/Frontpage/Frontpage.scss
+++ b/src/components/Frontpage/Frontpage.scss
@@ -35,7 +35,6 @@
             width: 10px;
             height: 8px;
             background: #d7d7d9
-            
         }
         
         .scrollbar::-webkit-scrollbar-track {
@@ -49,11 +48,25 @@
 
     }
 
-    
-    
 }
 
 .filterBottom {
     padding-bottom: .5rem;
     margin-bottom: 1rem;
+}
+
+@media (min-width: 992px) {
+    .filtersContainer {
+        display: flex;
+        justify-content: space-between;
+
+        .filterContainer {
+            display: block;
+            width: auto;
+            padding: 0;
+            margin: 0;
+            margin-bottom: 1rem;
+        }    
+    }
+    
 }
