Corrige links decoration e tamanho dos modals de videos e screenshots

--- a/src/components/GameCard/GameCard.scss
+++ b/src/components/GameCard/GameCard.scss
@@ -86,6 +86,11 @@
             }
             background-color: #747fb3;
             border: none;
+
+            &:active:focus {
+                background-color: #747fb3;
+                box-shadow: none !important;
+            }
         }
     }
      
