--- a/src/assets/custom.scss
+++ b/src/assets/custom.scss
@@ -1,3 +1,5 @@
+$primary: #747fb3;
+
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
 
 body {
@@ -43,6 +45,28 @@ body {
     linear-gradient(60deg, #d7d7d9 40%, rgba(0, 0, 0, 0) 41%),
     linear-gradient(180deg, #d7d7d9 30%, rgba(0, 0, 0, 0) 31%);
     background-color: #18181b;
+}
+
+::-webkit-input-placeholder { /* WebKit, Blink, Edge */
+  color:    #d7d7d9;
+}
+:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+ color:    #d7d7d9;
+ opacity:  1;
+}
+::-moz-placeholder { /* Mozilla Firefox 19+ */
+ color:    #d7d7d9;
+ opacity:  1;
+}
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+ color:    #d7d7d9;
+}
+::-ms-input-placeholder { /* Microsoft Edge */
+ color:    #d7d7d9;
+}
+
+::placeholder { /* Most modern browsers support this now. */
+ color:    #d7d7d9;
 }
 
 @keyframes load {
