Modifica cursor para pointer quando passar por screenshot ou video

--- a/src/components/GameFullInfo/GameFullInfo.scss
+++ b/src/components/GameFullInfo/GameFullInfo.scss
@@ -100,6 +100,7 @@
                 color: #d7d7d9;
                 width: 200px;
                 height: auto;
+                cursor: pointer;
             }
         }
 
@@ -114,6 +115,7 @@
             flex: 0 0 auto;
             margin: .5rem;
             max-width: 350px;
+            cursor: pointer;
         }
 
         .SimilarGamesList {
