--- a/src/components/GameCard/GameCard.scss
+++ b/src/components/GameCard/GameCard.scss
@@ -21,6 +21,11 @@
             width: 100%;
             color: #d7d7d9;
             margin-right: 1rem;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+            height: 50px;
         }
 
         .LinkIcon {
@@ -47,6 +52,7 @@
 
 
     .CoverAndInfo {
+        height: 150px;
         display: flex;
 
         .GameInfo {
