--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -9,11 +9,36 @@
     background-image: url("../../assets/img/suikoden-2-box-art-crop_1280.0.0.jpg");
     background-repeat: no-repeat;
     background-attachment: scroll;
+    background-position: center top;
     background-size: cover;
     box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.8);
+    height: 20rem;
+    margin-top: 3.5rem;
+
+    #header_container {
+        height: 100%;
+
+        .row {
+            height: 100%;
+            align-items: center;
+            max-width: 1000px;
+            margin: 0 auto;
+        }
+    }
+
+    P {
+        margin-bottom: 0;
+        font-weight: 100;
+    }
+
+    button {
+        font-weight: 500;
+        color: #d7d7d9;
+        margin-top: 1rem;
+    }
 
     h1 {
-        font-size: 18px;
+        font-size: 30px;
     }
 
     h4 {
