--- a/src/assets/custom.scss
+++ b/src/assets/custom.scss
@@ -1,4 +1,5 @@
 $primary: #747fb3;
+$secondary: #d7d7d9;
 
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
 
@@ -11,7 +12,6 @@ body {
     width: 10px;
     height: 8px;
     background: #d7d7d9
-    
 }
 
 *::-webkit-scrollbar-track {
