--- a/src/components/SignUp/SignUp.scss
+++ b/src/components/SignUp/SignUp.scss
@@ -1,44 +1,78 @@
-.form__signup {
+.form {
     margin-top: 5rem;
-
-    .form__title {
-        color: #747fb3;
-        text-align: center;
-        font-size: 30px;
+    
+    &__signup {
+        margin-top: 5rem;
+    
+        .form__title {
+            color: #747fb3;
+            text-align: center;
+            font-size: 30px;
+        }
+    
+        form {
+            color: white;
+            max-width: 400px;
+            margin: 0 auto;
+            padding: 1rem;
+    
+            input {
+                display: block;
+                width: 100%;
+                height: calc(1.5em + .75rem + 2px);
+                padding: 0.375rem 0.75rem;
+                font-size: 1rem;
+                font-weight: 400;
+                line-height: 1.5;
+                color: #d7d9d9;
+                background-color: #404046;
+                background-clip: padding-box;
+                border: none;
+                border-radius: 0.25rem;
+                transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+            }
+    
+            button {
+                margin-top: 2rem;
+                width: 100%;
+            }
+    
+            .form__error {
+                color: red;
+                font-size: 15px;
+            }
+        }
     }
 
-    form {
-        color: white;
-        max-width: 400px;
+    &__result {
+        background: #404046;
+        color: #d7d9d9;
+        max-width: 370px;
+        width: 90%;
+        text-align: center;
         margin: 0 auto;
         padding: 1rem;
+        border-radius: .5rem;
 
-        input {
-            display: block;
-            width: 100%;
-            height: calc(1.5em + .75rem + 2px);
-            padding: 0.375rem 0.75rem;
-            font-size: 1rem;
-            font-weight: 400;
-            line-height: 1.5;
+        &--success {
+            background: #404046;
             color: #d7d9d9;
-            background-color: #404046;
-            background-clip: padding-box;
-            border: none;
-            border-radius: 0.25rem;
-            transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-        }
+            max-width: 370px;
+            width: 90%;
+            text-align: center;
+            margin: 0 auto;
+            padding: 1rem;
+            border-radius: .5rem;
+            margin-top: 15rem;
 
-        button {
-            margin-top: 2rem;
-            width: 100%;
-        }
+            p {
+                margin-bottom: 0;
+            }
 
-        .form__error {
-            color: red;
-            font-size: 15px;
+            button {
+                font-weight: 500;
+            }
         }
     }
-
-
 }
+
