--- a/src/components/Frontpage/Frontpage.scss
+++ b/src/components/Frontpage/Frontpage.scss
@@ -1,72 +1,70 @@
 .contentWrapper {
-    padding-top: 5rem;
+  padding-top: 5rem;
 }
 
 .filterContainer {
-    display: flex;
-    overflow-x: auto;
-    margin-bottom: .5rem;
+  display: flex;
+  overflow-x: auto;
+  margin-bottom: 0.5rem;
 
-    select {
-        padding: .3rem;
-        padding-right: 1.5rem;
-        background: #18181b;
-        color: #d1d1d3;
-        margin-right: 1rem;
-        border: none;
-        width: 150px;
-        max-width: 200px;
-        text-transform: capitalize;
-        background: url(https://img.icons8.com/material-outlined/16/d1d1d3/down-squared.png) no-repeat right #18181b;
-        -webkit-appearance: none;
-        -moz-appearance:none;
+  select {
+    padding: 0.3rem;
+    padding-right: 1.5rem;
+    background: #18181b;
+    color: #d1d1d3;
+    margin-right: 1rem;
+    border: none;
+    width: 150px;
+    max-width: 200px;
+    text-transform: capitalize;
+    background: url(https://img.icons8.com/material-outlined/16/d1d1d3/down-squared.png)
+      no-repeat right #18181b;
+    -webkit-appearance: none;
+    -moz-appearance: none;
 
-        &:focus {
-            outline: none;
-        }
-
-        option {
-            font-size: 13px;
-            border: none;
-            text-transform: capitalize;
-        }
-
-        .scrollbar::-webkit-scrollbar {
-            width: 10px;
-            height: 8px;
-            background: #d7d7d9
-        }
-        
-        .scrollbar::-webkit-scrollbar-track {
-            box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-        }
-        
-        .scrollbar::-webkit-scrollbar-thumb {
-            background-color: #404046;
-            outline: 1px solid white;
-        }
-
+    &:focus {
+      outline: none;
     }
 
+    option {
+      font-size: 13px;
+      border: none;
+      text-transform: capitalize;
+    }
+
+    .scrollbar::-webkit-scrollbar {
+      width: 10px;
+      height: 8px;
+      background: #d7d7d9;
+    }
+
+    .scrollbar::-webkit-scrollbar-track {
+      box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    }
+
+    .scrollbar::-webkit-scrollbar-thumb {
+      background-color: #404046;
+      outline: 1px solid white;
+    }
+  }
 }
 
 .filterBottom {
-    padding-bottom: .5rem;
-    margin-bottom: 1rem;
+  padding-bottom: 0.5rem;
+  margin-bottom: 1rem;
 }
 
 @media (min-width: 992px) {
-    .filtersContainer {
-        display: flex;
-        justify-content: space-between;
+  .filtersContainer {
+    display: flex;
+    justify-content: space-between;
 
-        .filterContainer {
-            display: block;
-            width: auto;
-            padding: 0;
-            margin: 0;
-            margin-bottom: 1rem;
-        }    
+    .filterContainer {
+      display: block;
+      width: auto;
+      padding: 0;
+      margin: 0;
+      margin-bottom: 1rem;
     }
-    
+  }
 }
