--- a/src/components/GameCard/GameCard.scss
+++ b/src/components/GameCard/GameCard.scss
@@ -1,157 +1,154 @@
 .GameCard {
-    border: none;
-    border-radius: 0;
-    margin-bottom: 1rem;
-    padding: 1rem;
-    background-color: #18181b;
+  border: none;
+  border-radius: 0;
+  margin-bottom: 1rem;
+  padding: 1rem;
+  background-color: #18181b;
 
-    img {
-        height: auto;
-        max-height: 160px;
-        width: 40%;
+  img {
+    height: auto;
+    max-height: 160px;
+    width: 40%;
+  }
+
+  .GameNameContainer {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+
+    .GameName {
+      font-family: 'Lato', sans-serif;
+      width: 100%;
+      color: #d7d7d9;
+      margin-right: 1rem;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      height: 50px;
     }
 
-    .GameNameContainer {
-        display: flex;
-        justify-content: center;
-        width: 100%;
-        
-        .GameName {
-            font-family: 'Lato', sans-serif;
-            width: 100%;
-            color: #d7d7d9;
-            margin-right: 1rem;
-            display: -webkit-box;
-            -webkit-line-clamp: 2;
-            -webkit-box-orient: vertical;
-            overflow: hidden;
-            height: 50px;
-        }
+    .LinkIcon {
+      margin-left: auto;
+      color: #747fb3;
+    }
+    .GameRating {
+      background: #404046;
+      height: 50px;
+      width: 50px;
+      border-radius: 10%;
+      margin-left: auto;
+      text-align: center;
 
-        .LinkIcon {
-            margin-left: auto;
-            color: #747fb3;
-        }
-        .GameRating {
-            background: #404046;
-            height: 50px;
-            width: 50px;
-            border-radius: 10%;
-            margin-left: auto;
-            text-align: center;
-    
-            span {
-                height: 50px;
-                line-height: 50px;
-                white-space: nowrap;
-                color: #949494;
-                font-size: 1.5rem;
-            }
-        }
+      span {
+        height: 50px;
+        line-height: 50px;
+        white-space: nowrap;
+        color: #949494;
+        font-size: 1.5rem;
+      }
+    }
+  }
+
+  .CoverAndInfo {
+    height: 150px;
+    display: flex;
+
+    .GameInfo {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+
+      .GameSummary {
+        display: -webkit-box;
+        -webkit-line-clamp: 6;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        padding-left: 0.5rem;
+        font-size: 14px;
+        color: #d7d7d9;
+        max-width: 200px;
+      }
+    }
+  }
+
+  .ReleaseDateAndButton {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    .ReleaseDate {
+      font-family: 'Roboto Slab', serif;
+      color: #a5b4c4;
     }
 
+    button {
+      color: #d7d7d9;
+      span {
+        margin-left: 2px;
+        color: #d7d7d9;
+      }
+      background-color: #747fb3;
+      border: none;
 
-    .CoverAndInfo {
-        height: 150px;
-        display: flex;
-
-        .GameInfo {
-            display: flex;
-            flex-direction: column;
-            width: 100%;
-
-            .GameSummary {
-                display: -webkit-box;
-                -webkit-line-clamp: 6;
-                -webkit-box-orient: vertical;
-                overflow: hidden;
-                padding-left: .5rem;
-                font-size: 14px;
-                color: #d7d7d9;
-                max-width: 200px;
-            }
- 
-        }
+      &:active:focus {
+        background-color: #747fb3;
+        box-shadow: none !important;
+      }
     }
-
-    .ReleaseDateAndButton {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-
-        .ReleaseDate {
-            font-family: 'Roboto Slab', serif;
-            color: #a5b4c4;
-        }
-
-        button {
-            color: #d7d7d9;
-            span {
-                margin-left: 2px; 
-                color: #d7d7d9; 
-            }
-            background-color: #747fb3;
-            border: none;
-
-            &:active:focus {
-                background-color: #747fb3;
-                box-shadow: none !important;
-            }
-        }
-    }
-     
+  }
 }
 
-@media (min-width: 768px) { 
-    .GameCard {
-        margin-right: 1rem;
+@media (min-width: 768px) {
+  .GameCard {
+    margin-right: 1rem;
+  }
+}
+
+@media (min-width: 460px) {
+  .GameCard {
+    .CoverAndInfo {
+      .GameInfo {
+        .GameSummary {
+          max-width: 100%;
+        }
+      }
     }
- }
+  }
+}
 
- @media (min-width: 460px) {
-    .GameCard {
-        .CoverAndInfo {
-            .GameInfo {
-                .GameSummary {
-                    max-width: 100%;
-                }
-            }
+@media (min-width: 768px) {
+  .GameCard {
+    .CoverAndInfo {
+      .GameInfo {
+        .GameSummary {
+          max-width: 200px;
         }
-    } 
- }
+      }
+    }
+  }
+}
 
- @media (min-width: 768px) {
-    .GameCard {
-        .CoverAndInfo {
-            .GameInfo {
-                .GameSummary {
-                    max-width: 200px;
-                }
-            }
+@media (min-width: 992px) {
+  .GameCard {
+    .CoverAndInfo {
+      .GameInfo {
+        .GameSummary {
+          max-width: 100%;
         }
-    } 
- }
+      }
+    }
+  }
+}
 
- @media (min-width: 992px) {
-    .GameCard {
-        .CoverAndInfo {
-            .GameInfo {
-                .GameSummary {
-                    max-width: 100%;
-                }
-            }
+@media (min-width: 1200px) {
+  .GameCard {
+    .CoverAndInfo {
+      .GameInfo {
+        .GameSummary {
+          max-width: 100%;
         }
-    } 
- }
-
- @media (min-width: 1200px) {
-    .GameCard {
-        .CoverAndInfo {
-            .GameInfo {
-                .GameSummary {
-                    max-width: 100%;
-                }
-            }
-        }
-    } 
- }
+      }
+    }
+  }
+}
