--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,86 +1,85 @@
 #VideoContainer {
-    h1 {
-        color: #d7d7d9;
-        font-size: 20px
-    }
+  h1 {
+    color: #d7d7d9;
+    font-size: 20px;
+  }
 }
 
 #hero {
-    background-image: url("../../assets/img/suikoden-2-box-art-crop_1280.0.0.jpg");
-    background-repeat: no-repeat;
-    background-attachment: scroll;
-    background-position: center top;
-    background-size: cover;
-    box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.8);
-    height: 20rem;
-    margin-top: 3.5rem;
+  background-image: url('../../assets/img/suikoden-2-box-art-crop_1280.0.0.jpg');
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: center top;
+  background-size: cover;
+  box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.8);
+  height: 20rem;
+  margin-top: 3.5rem;
 
-    #header_container {
-        height: 100%;
+  #header_container {
+    height: 100%;
 
-        .row {
-            height: 100%;
-            align-items: center;
-            max-width: 1000px;
-            margin: 0 auto;
-        }
+    .row {
+      height: 100%;
+      align-items: center;
+      max-width: 1000px;
+      margin: 0 auto;
     }
+  }
 
-    P {
-        margin-bottom: 0;
-        font-weight: 100;
-    }
+  P {
+    margin-bottom: 0;
+    font-weight: 100;
+  }
 
-    button {
-        font-weight: 500;
-        color: #d7d7d9;
-        margin-top: 1rem;
-    }
+  button {
+    font-weight: 500;
+    color: #d7d7d9;
+    margin-top: 1rem;
+  }
 
-    h1 {
-        font-size: 30px;
-    }
+  h1 {
+    font-size: 30px;
+  }
 
-    h4 {
-        font-size: 14px;
-    }
+  h4 {
+    font-size: 14px;
+  }
 }
 
 .RedditVideoListContainer {
-    display: flex;
-    flex-wrap: nowrap;
-    overflow-x: auto;
-    margin-top: .5rem;
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+  margin-top: 0.5rem;
 
-    .RedditVideoContainer {
-        flex: 0 0 auto;
-        margin: 0.5rem;
-        color: #d7d7d9;
-        width: 300px;
-        cursor: pointer;
+  .RedditVideoContainer {
+    flex: 0 0 auto;
+    margin: 0.5rem;
+    color: #d7d7d9;
+    width: 300px;
+    cursor: pointer;
 
-        h5 {
-            font-size: 16px;
-            color: #747fb3;
-            display: -webkit-box;
-            -webkit-line-clamp: 1;
-            -webkit-box-orient: vertical;
-            overflow: hidden;
-        }
-
-        img {
-            max-width:100%;
-        }
-
-        iframe {
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            border: 0;
-        }
+    h5 {
+      font-size: 16px;
+      color: #747fb3;
+      display: -webkit-box;
+      -webkit-line-clamp: 1;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
     }
 
+    img {
+      max-width: 100%;
+    }
+
+    iframe {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border: 0;
+    }
+  }
 }
